trunk/Archive2/63/197352771e951a/output
main.cpp:3:17: error: 'Resource' was not declared in this scope
 std::unique_ptr<Resource> allocate()
                 ^
main.cpp:3:25: error: template argument 1 is invalid
 std::unique_ptr<Resource> allocate()
                         ^
main.cpp:3:25: error: template argument 2 is invalid
main.cpp: In function 'int allocate()':
main.cpp:5:16: error: expected type-specifier before 'Resource'
     return new Resource();
                ^
main.cpp:5:16: error: expected ';' before 'Resource'
main.cpp:5:25: error: 'Resource' was not declared in this scope
     return new Resource();
                         ^
main.cpp:6:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
