trunk/Archive2/63/197352771e951a/main.cpp
#include <memory>

std::unique_ptr<Resource> allocate()
{
    return new Resource();
}
